DU TRENGER: "PlantUML"
@startuml

class Plassering {
    - x: int
    - y: int
    - vindusobjekt: object
    + __init__(x: int, y: int, vindusobjekt: object)
}
class Rektangel {
    - farge: tuple
    - lengde: int
    - bredde: int
    + __init__(x: int, y: int, vindusobjekt: object, farge: tuple, lengde: int, bredde: int)
    + tegn(): void
    + sentrum(): tuple
}
class Sirkel {
    - farge: tuple
    - radius: int
    + __init__(x: int, y: int, vindusobjekt: object, farge: tuple, radius: int)
    + tegn(): void
    + finn_avstand(annen_ball: Sirkel): float
    + kollisjon(annen_ball: Sirkel): bool
}
class Strek {
    - farge: tuple
    - bredde: int
    - slutt_x: int
    - slutt_y: int
    + __init__(x: int, y: int, vindusobjekt: object, farge: tuple, bredde: int, slutt_x: int, slutt_y: int)
    + tegn(): void
}
class Bilde_objekt {
    - banelinje: str
    - lengde: int
    - bredde: int
    - mittBilde: object
    + __init__(x: int, y: int, vindusobjekt: object, banelinje: str, lengde: int, bredde: int)
    + tegn(): void
    + sentrum(): tuple
}
class NPC {
    - fartX: float
    - fartY: float
    - skudd: list
    + __init__(x: int, y: int, vindusobjekt: object, banelinje: str, lengde: int, bredde: int, fartX: float, fartY: float)
    + flytt(): void
    + skyt(fartX: float, fartY: float, filnavn: str, lengde: int, bredde: int, flytt_skudd: int = 0): void
    + tegn(): void
}
class Skudd {
    + __init__(x: int, y: int, vindusobjekt: object, banelinje: str, lengde: int, bredde: int, fartX: float, fartY: float)
    + flytt(): void
}
class Spiller {
    - tyngdeakselerasjon: float
    - hopp_hastighet: int
    - hopper: bool
    - fart_y: float
    + __init__(x: int, y: int, vindusobjekt: object, banelinje: str, lengde: int, bredde: int)
    + hopp(): void
    + flytt(bakke_y_koordinat: int): void
}
class Knapp {
    - rektangel: object
    - farge: tuple
    - tekst: str
    - tekst_farge: tuple
    + __init__(x: int, y: int, vindusobjekt: object, bredde: int, lengde: int, farge: tuple, tekst: str, tekst_farge: tuple)
    + tegn(): void
    + er_trykket(mus_posisjon: tuple): bool
}
class Text_input {
    - rektangel: object
    - font: object
    - tekst: str
    - aktiv: bool
    + __init__(x: int, y: int, vindusobjekt: object, bredde: int, lengde: int, tekst_storelse: int)
    + hondter_event(event: object): void
    + tegn(): void
}
class Poengtavle {
    - filnavn: str
    - font: object
    - poeng_data: list
    + __init__(x: int, y: int, vindusobjekt: object, filnavn: str, tekst_storelse: int)
    + les_fildata(): list
    + hent_csv_overskrifter(): list
    + tegn(): void
}
class Start_skjerm {
    - vindu_obj: object
    - start_knapp: object
    - avslutt_knapp: object
    - overskrift: object
    - under_overskrift: object
    - poeng_tavle: object
    + __init__(vindu_obj: object, bredde: int, lengde: int, tekst_storelse: int, poeng_tavle_fil: str)
    + tegn(): void
}
class Slutt_skjerm {
    - vindu_obj: object
    - nytt_spill_knapp: object
    - avslutt_knapp: object
    - overskrift: object
    - under_overskrift: object
    - poeng_tavle: object
    + __init__(vindu_obj: object, bredde: int, lengde: int, tekst_storelse: int, poeng_tavle_fil: str)
    + tegn(): void
}

Plassering "1" --> "*" Rektangel : has
Plassering "1" --> "*" Sirkel : has
Plassering "1" --> "*" Strek : has
Plassering "1" --> "*" Bilde_objekt : has
Plassering "1" --> "*" NPC : has
Plassering "1" --> "1" Spiller : has
Plassering "1" --> "*" Knapp : has
Plassering "1" --> "*" Text_input : has
Plassering "1" --> "1" Poengtavle : has
Plassering "1" --> "1" Start_skjerm : has
Plassering "1" --> "1" Slutt_skjerm : has

@enduml
